--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,9 @@ runs-on: ubuntu-latest
 steps:
 - uses: actions/checkout@v3
 - name: Validate HTML
-uses: davidanson/html-validator-action@v1
+        uses: Cyb3r-Jak3/html5validator-action@v7.2.0
+        with:
+          root: ./
 - name: Deploy to Cloudflare Pages
 uses: cloudflare/pages-action@v1
 with:
